--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "ColoredBadges",
+  "version": "0.0.0",
   "private": true,
+  "author": "Izzy H. Adams",
+  "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@uiw/react-markdown-preview": "^3.1.3",
     "bootstrap": "^5.0.2",
-    "react": "16.11.0",
+    "chart.js": "^3.4.1",
+    "classnames": "^2.3.1",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
+    "node-sass-package-importer": "^5.3.2",
+    "nouislider": "^15.2.0",
+    "react": "17.0.1",
     "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.0.3",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-datetime": "^3.0.4",
     "react-dom": "16.11.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
