--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ColoredBadges",
-  "homepage": "./",
+  "homepage": "./home/",
   "version": "0.0.0",
   "private": true,
   "author": "Izzy H. Adams",
