--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,17 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@pinata/sdk": "^1.1.23",
     "@uiw/react-markdown-preview": "^3.1.3",
     "bootstrap": "^5.0.2",
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
+    "dotenv": "^6.2.0",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.7.0",
+    "ipfs-http-client": "^52.0.0",
     "moment": "^2.29.1",
+    "nft.storage": "^3.0.2",
     "node-sass": "^6.0.1",
     "node-sass-package-importer": "^5.3.2",
     "nouislider": "^15.2.0",
@@ -26,6 +32,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
+    "use-nft": "^0.9.0",
     "web3": "1.2.2"
   },
   "scripts": {
