--- a/client/package.json
+++ b/client/package.json
@@ -22,15 +22,17 @@
     "node-sass": "^6.0.1",
     "node-sass-package-importer": "^5.3.2",
     "nouislider": "^15.2.0",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-chartjs-2": "^3.0.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
-    "react-dom": "16.11.0",
+    "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
+    "remove": "^0.1.5",
+    "use-nft": "^0.9.0",
     "web3": "1.2.2"
   },
   "scripts": {
